@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.planner.logical;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -25,7 +26,7 @@ public class LogicalWrite extends LogicalPlan {
 
   /** Construct a logical write with given child node, table and column name list. */
   public LogicalWrite(LogicalPlan child, Table table, List<String> columns) {
-    super(List.of(child));
+    super(Collections.singletonList(child));
     this.table = table;
     this.columns = columns;
   }
